# Swoop-CLI-

rust-backend/: Cargo.toml
rust-backend/frontend/: package-lock.json  package.json
rust-backend/frontend/public/: index.html  manifest.json
rust-backend/frontend/src/: App.css  App.js  index.css
rust-backend/macos/: Info.plist  create_app.sh
rust-backend/src/: main.rs
rust-backend/src-tauri/: tauri.conf.json
